--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "dependencies": {
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@shopify/restyle": "^2.4.2",
     "expo": "~49.0.15",
-    "expo-dev-client": "~2.4.12",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
     "expo-build-properties": "~0.8.3",
+    "expo-dev-client": "~2.4.12",
     "expo-splash-screen": "~0.20.5",
-    "expo-system-ui": "~2.4.0"
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-native": "0.72.6",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
