--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
     "@react-navigation/native": "^6.1.9",
@@ -17,6 +18,7 @@
     "expo": "~49.0.15",
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.12",
+    "expo-haptics": "~12.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -26,11 +28,16 @@
     "react-native-gifted-chat": "^2.4.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "13.9.0",
+    "tinycolor2": "^1.6.0",
+    "yup": "^1.3.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/tinycolor2": "^1.4.6",
     "typescript": "^5.1.3"
   },
   "private": true
