--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "ts-check": "npx tsc --noEmit",
+    "prettier-check": "npx prettier . --check",
+    "prettier": "npx prettier . --write"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -31,13 +34,13 @@
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "13.9.0",
     "tinycolor2": "^1.6.0",
-    "yup": "^1.3.2",
-    "zod": "^3.22.4"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/tinycolor2": "^1.4.6",
+    "prettier": "3.0.3",
     "typescript": "^5.1.3"
   },
   "private": true
