--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
     "@types/react": "~18.2.14",
     "@types/tinycolor2": "^1.4.6",
     "prettier": "3.0.3",
