--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "ts-check": "npx tsc --noEmit",
+    "lint": "eslint .",
     "prettier-check": "npx prettier . --check",
     "prettier": "npx prettier . --write"
   },
@@ -41,7 +42,9 @@
     "@trivago/prettier-plugin-sort-imports": "^4.2.1",
     "@types/react": "~18.2.14",
     "@types/tinycolor2": "^1.4.6",
-    "prettier": "3.0.3",
+    "eslint": "^8.53.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.0.3",
     "typescript": "^5.1.3"
   },
   "private": true
