--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-svg": "13.9.0",
     "tinycolor2": "^1.6.0",
     "yup": "^1.3.2",
-    "expo-image": "~1.3.5"
+    "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
