--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-firebase/firestore": "^18.6.1",
+    "@react-native-firebase/storage": "^18.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@shopify/restyle": "^2.4.2",
@@ -24,6 +25,8 @@
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.12",
     "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -36,9 +39,7 @@
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "13.9.0",
     "tinycolor2": "^1.6.0",
-    "yup": "^1.3.2",
-    "expo-image": "~1.3.5",
-    "expo-image-picker": "~14.3.2"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
