--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "13.9.0",
     "tinycolor2": "^1.6.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
