--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-firebase/firestore": "^18.6.1",
+    "@react-native-firebase/messaging": "^18.6.1",
     "@react-native-firebase/storage": "^18.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
@@ -34,13 +35,13 @@
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "13.9.0",
     "tinycolor2": "^1.6.0",
-    "yup": "^1.3.2",
-    "react-native-reanimated": "~3.3.0"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
